--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -10,7 +10,7 @@
         <%= link_to task.title, task %>
         (<%= task.state %>)
         <%= link_to 'Edit', edit_task_path(task) %> |
-        <%= link_to 'Destroy', task, method: :delete, data: { confirm: 'Are you sure?' } %>
+        <%= link_to "Destroy", task_path(task), data: {turbo_method: :delete, turbo_confirm: "Are you sure?"} %>
       </li>
     <% end %>
   <% end %>
