--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -8,3 +8,4 @@
   <li><%= link_to "Edit", edit_task_path(@task) %></li>
   <li><%= link_to "Destroy", task_path(@task), data: {turbo_method: :delete, turbo_confirm: "Are you sure?"} %></li>
 </ul>
+<%= link_to 'Back', tasks_path %>
